# SlyshMeFX

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  todo.txt
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  statics.rs  structs.rs  util.rs
src/lib/: types.ts
src/lib/components/ui/slider/: slider.svelte
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
