[package]
name = "app"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.6", features = ["tray-icon", "image-png"] }
# tauri-plugin-wallpaper = { path = "../../tauri-plugin-wallpaper" }
tauri-plugin-wallpaper = "2.0.2"
wallpaper = "3.2.0"
audioviz = "0.6.0"
wasapi = "0.15.0"
fast-math = "0.1.1"
# windows = { version = "0.61.3", features = ["Win32", "Win32_System_Registry", "Win32_Security", "Win32_Media", "Win32_Media_Audio", "Win32_Media_Audio_Apo", "IAudioSystemEffects"] }
