[package]
name = "SlyshMeFX"
version = "0.2.4"
description = "SlyshMeFX is a system-wide audio visualiser and equaliser."
authors = ["VioPaige"]
license = "GPLv3"
repository = "https://github.com/SlyshMe/SlyshMeFX"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.6", features = ["tray-icon", "image-png"] }
# tauri-plugin-wallpaper = { path = "../../tauri-plugin-wallpaper" }
tauri-plugin-wallpaper = { git = "https://github.com/VioPaige/tauri-plugin-wallpaper.git" }
wallpaper = "3.2.0"
audioviz = "0.6.0"
wasapi = "0.15.0"
fast-math = "0.1.1"
